corpus/variables.txt
==================
Variable declaration
==================

number a
string a
bool a

---

(program
  (variable_declaration
    type: (primitive_type)
    name: (identifier))
  (variable_declaration
    type: (primitive_type)
    name: (identifier))
  (variable_declaration
    type: (primitive_type)
    name: (identifier)))

==================
Variable definition
==================

a = 5

---

(program
  (variable_definition
    name: (identifier)
    value: (number)))

==================
Variable declaration and definition
==================

number a = 5

---

(program
  (variable_definition
    (variable_declaration
      type: (primitive_type)
      name: (identifier))
    value: (number)))

==================
Variable naming
==================

number a561a
number 516a4564
number 45a1a_6541

---

(program
  (variable_declaration
      type: (primitive_type)
      name: (identifier))
  (variable_declaration
      type: (primitive_type)
      name: (identifier))
  (variable_declaration
      type: (primitive_type)
      name: (identifier)))